<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2017-2018 Tran Le Duy
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/img_encode_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rippleBackground"
                android:contentDescription="@string/desc_encode_all"
                android:padding="8dp"
                android:src="@drawable/ic_done_all_black_24dp"
                android:tint="?imageTintColor" />

            <include
                android:id="@+id/edit_menu_input"
                layout="@layout/edit_menu" />
        </LinearLayout>

        <com.duy.text.converter.view.RoundedBackgroundEditText
            android:id="@+id/edit_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?roundBackground"
            android:gravity="top"
            android:hint="@string/hint_encode_here"
            android:inputType="textMultiLine"
            android:padding="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/choose_method"
            android:textColor="?android:textColorPrimary" />


        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_codec_methods"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?roundBackground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/img_decode_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rippleBackground"
                android:contentDescription="@string/desc_decode_all"
                android:padding="8dp"
                android:src="@drawable/ic_done_all_black_24dp"
                android:tint="?imageTintColor" />

            <include
                android:id="@+id/edit_menu_output"
                layout="@layout/edit_menu" />

        </LinearLayout>

        <com.duy.text.converter.view.RoundedBackgroundEditText
            android:id="@+id/edit_output"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?roundBackground"
            android:gravity="top"
            android:hint="@string/hint_output_here"
            android:inputType="textMultiLine"
            android:padding="8dp" />


    </LinearLayout>
</LinearLayout>
